# dacho/Cargo.toml

[package]
name         = "dacho"
version      = "0.2.0"

edition      = "2021"
rust-version = "1.81.0"

authors      = ["mochou-p"]
description  = "ECS Game Engine"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/mochou-p/dacho"

keywords     = ["vulkan", "engine", "renderer", "ash", "winit"]
categories   = ["game-development", "game-engines", "graphics", "rendering", "rendering::engine"]

[workspace]
members = [
    "core/app",
    "core/components",
    "core/components/input",
    "core/components/mesh",
    "core/components/time",
    "core/components/world",
    "core/ecs",
    "core/log",
    "core/renderer",
    "core/renderer/vulkan/backend",
    "core/renderer/vulkan/validation",
    "core/shader",
    "core/shader/wgsl",
    "core/types",
    "core/window",
    "proc-macro"
]

[features]
default           = ["vulkan", "wgsl"]

vulkan            = ["dacho-renderer/vulkan"]
vulkan-validation = ["dacho-renderer/vulkan-validation"]
wgsl              = ["dacho-shader/wgsl"]

[dependencies]
dacho-app        = { path = "core/app"        }
dacho-components = { path = "core/components" }
dacho-ecs        = { path = "core/ecs"        }
dacho-renderer   = { path = "core/renderer"   }
dacho-shader     = { path = "core/shader"     }
dacho-types      = { path = "core/types"      }
dacho-proc-macro = { path = "proc-macro"      }

[profile.release]
strip         = "symbols"
lto           = "fat"
panic         = "abort"
codegen-units = 1

[lints.clippy]
all      = "forbid"
pedantic = "deny"
nursery  = "forbid"
cargo    = "deny"

