# dacho/Cargo.toml

[package]
name         = "dacho"
version      = "0.2.0"

edition      = "2021"
rust-version = "1.85.0"

authors      = ["mochou-p"]
description  = "ECS Game Engine"
readme       = "README.md"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/mochou-p/dacho"

keywords     = ["vulkan", "engine", "renderer", "ash", "winit"]
categories   = ["game-development", "game-engines", "graphics", "rendering", "rendering::engine"]

[workspace]
members = [
    "core/components",
    "core/components/mesh",
    "core/game",
    "core/log",
    "core/renderer",
    "core/renderer/vulkan/backend",
    "core/renderer/vulkan/validation",
    "core/shader",
    "core/shader/wgsl",
    "core/window"
]

[features]
default           = ["vulkan", "wgsl"]

vulkan            = ["dacho-renderer/vulkan"]
vulkan-validation = ["dacho-renderer/vulkan-validation"]
wgsl              = ["dacho-shader/wgsl"]

[dependencies]
dacho-components = { path = "core/components" }
dacho-game       = { path = "core/game"       }
dacho-renderer   = { path = "core/renderer"   }
dacho-shader     = { path = "core/shader"     }

glam  = { version = "0.29.2", default-features = false, features = ["std"] }
winit = "0.30.4"

[profile.release]
strip         = "symbols"
lto           = "fat"
panic         = "abort"
codegen-units = 1

[lints.clippy]
all      = "forbid"
pedantic = "forbid"
nursery  = "forbid"
cargo    = "deny"

