# dacho/Cargo.toml

[workspace]
resolver = "3"
members  = [
    "examples/usage",
    "crates/dacho",
    "crates/dacho_renderer",
    "crates/dacho_window"
]

[workspace.lints.rust]
non_ascii_idents = "warn"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }

# -all:
let_and_return          = "allow"
option_map_unit_fn      = "allow"
# -pedantic:
cast_precision_loss     = "allow"
missing_panics_doc      = "allow"
similar_names           = "allow"
# -cargo:
cargo_common_metadata   = "allow"
multiple_crate_versions = "allow"

# +restriction:
absolute_paths                       = "warn"
allow_attributes                     = "warn"
allow_attributes_without_reason      = "warn"
as_pointer_underscore                = "warn"
as_underscore                        = "warn"
assertions_on_result_states          = "warn"
cfg_not_test                         = "warn"
clone_on_ref_ptr                     = "warn"
cognitive_complexity                 = "warn"
create_dir                           = "warn"
dbg_macro                            = "warn"
decimal_literal_representation       = "warn"
default_numeric_fallback             = "warn"
default_union_representation         = "warn"
deref_by_slicing                     = "warn"
doc_include_without_cfg              = "warn"
else_if_without_else                 = "warn"
empty_drop                           = "warn"
empty_enum_variants_with_brackets    = "warn"
empty_structs_with_brackets          = "warn"
error_impl_error                     = "warn"
exit                                 = "warn"
filetype_is_file                     = "warn"
float_cmp_const                      = "warn"
fn_to_numeric_cast_any               = "warn"
get_unwrap                           = "warn"
if_then_some_else_none               = "warn"
infinite_loop                        = "warn"
inline_asm_x86_att_syntax            = "warn"
large_include_file                   = "warn"
let_underscore_must_use              = "warn"
let_underscore_untyped               = "warn"
lossy_float_literal                  = "warn"
map_err_ignore                       = "warn"
map_with_unused_argument_over_ranges = "warn"
mem_forget                           = "warn"
min_ident_chars                      = "warn"
missing_assert_message               = "warn"
mixed_read_write_in_expression       = "warn"
multiple_inherent_impl               = "warn"
multiple_unsafe_ops_per_block        = "warn"
mutex_atomic                         = "warn"
mutex_integer                        = "warn"
needless_raw_strings                 = "warn"
non_ascii_literal                    = "warn"
non_zero_suggestions                 = "warn"
panic                                = "warn"
panic_in_result_fn                   = "warn"
pathbuf_init_then_push               = "warn"
pattern_type_mismatch                = "warn"
pointer_format                       = "warn"
precedence_bits                      = "warn"
print_stderr                         = "warn"
print_stdout                         = "warn"
pub_without_shorthand                = "warn"
rc_buffer                            = "warn"
rc_mutex                             = "warn"
redundant_test_prefix                = "warn"
redundant_type_annotations           = "warn"
renamed_function_params              = "warn"
rest_pat_in_fully_bound_structs      = "warn"
return_and_then                      = "warn"
same_name_method                     = "warn"
self_named_module_files              = "warn"
semicolon_inside_block               = "warn"
shadow_reuse                         = "warn"
shadow_same                          = "warn"
shadow_unrelated                     = "warn"
single_char_lifetime_names           = "warn"
str_to_string                        = "warn"
string_add                           = "warn"
string_lit_chars_any                 = "warn"
suspicious_xor_used_as_pow           = "warn"
tests_outside_test_module            = "warn"
todo                                 = "warn"
try_err                              = "warn"
undocumented_unsafe_blocks           = "warn"
unimplemented                        = "warn"
unnecessary_safety_comment           = "warn"
unnecessary_safety_doc               = "warn"
unnecessary_self_imports             = "warn"
unneeded_field_pattern               = "warn"
unreachable                          = "warn"
unseparated_literal_suffix           = "warn"
unused_result_ok                     = "warn"
unused_trait_names                   = "warn"
unwrap_in_result                     = "warn"
use_debug                            = "warn"
verbose_file_reads                   = "warn"

