# dacho/core/components/Cargo.toml

[package]
name         = "dacho-components"

edition      = "2021"
rust-version = "1.81.0"

authors      = ["mochou-p"]
license      = "MIT OR Apache-2.0"

[dependencies]
dacho-input-c = { path = "input" }
dacho-mesh-c  = { path = "mesh"  }
dacho-time-c  = { path = "time"  }
dacho-world-c = { path = "world" }

