# dacho/core/ecs/Cargo.toml

[package]
name         = "dacho-ecs"

edition      = "2021"
rust-version = "1.84.0"

authors      = ["mochou-p"]
license      = "MIT OR Apache-2.0"

[dependencies]
dacho-log    = { path = "../log"             }
dacho-mesh-c = { path = "../components/mesh" }
dacho-types  = { path = "../types"           }

