# dacho/core/game/Cargo.toml

[package]
name         = "dacho-game"

edition      = "2021"
rust-version = "1.85.0"

authors      = ["mochou-p"]
license      = "MIT OR Apache-2.0"

[dependencies]
dacho-components = { path = "../components" }
dacho-log        = { path = "../log"        }
dacho-renderer   = { path = "../renderer"   }
dacho-window     = { path = "../window"     }

glam  = { version = "0.29.2", default-features = false, features = ["std"] }
tokio = { version = "1.38.1", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }
winit = "0.30.4"

