# dacho/core/renderer/Cargo.toml

[package]
name         = "dacho-renderer"

edition      = "2021"
rust-version = "1.81.0"

authors      = ["mochou-p"]
license      = "MIT OR Apache-2.0"

[features]
vulkan            = ["dacho-vulkan"]
vulkan-validation = ["dacho-vulkan/validation"]

[dependencies]
dacho-vulkan = { path = "vulkan/backend", optional = true }

