# dacho/crates/dacho_app/Cargo.toml

[package]
publish      = false
name         = "dacho_app"
version      = "0.3.0"
edition      = "2024"
rust-version = "1.91.0"
authors      = ["mochou-p"]
description  = "dacho_app"
readme       = "README.md"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/mochou-p/dacho"

[dependencies]
dacho_renderer = { path = "../dacho_renderer", version = "0.3.0" }
dacho_window   = { path = "../dacho_window",   version = "0.3.0" }

[lints]
workspace = true

