# dacho/crates/dacho_window/Cargo.toml

[package]
publish      = false
name         = "dacho_window"
version      = "0.3.0"
edition      = "2024"
rust-version = "1.91.0"
authors      = ["mochou-p"]
description  = "dacho_window"
readme       = "README.md"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/mochou-p/dacho"

[dependencies]
ash-window     = "0.13.0"
winit          = { version = "0.30.12", default-features = false, features = ["rwh_06", "wayland", "x11"] }
dacho_renderer = { path = "../dacho_renderer", version = "0.3.0" }

[lints]
workspace = true

