# dacho/crates/dacho_window/Cargo.toml

[package]
publish      = false
name         = "dacho_window"
version      = "0.3.0"
edition      = "2024"
rust-version = "1.94.0"
authors      = ["mochou-p"]
description  = "dacho_window"
readme       = "README.md"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/mochou-p/dacho"

[features]
winit_wayland = ["winit/wayland"]
winit_x11     = ["winit/x11"]

[dependencies]
ash-window     = "0.13.0"
winit          = { version = "0.30.12", default-features = false, features = ["rwh_06"] }

[lints]
workspace = true

