# dacho/examples/usage/Cargo.toml

[package]
publish      = false
name         = "usage"
version      = "0.3.0"
edition      = "2024"
rust-version = "1.91.0"
authors      = ["mochou-p"]
description  = "dacho usage example"
readme       = "README.md"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/mochou-p/dacho"

[dependencies]
dacho = { path = "../../crates/dacho", features = [
    "app_gilrs",
    "window_winit_x11",
    "window_winit_wayland"
] }

# [lints]
# workspace = true

