# dacho/core/components/mesh/Cargo.toml

[package]
name         = "dacho-mesh"

edition      = "2021"
rust-version = "1.81.0"

authors      = ["mochou-p"]
license      = "MIT OR Apache-2.0"

[dependencies]
dacho-types = { path = "../../types" }

ash  = { version = "0.37.3"                                               }
glam = { version = "0.29.0", default-features = false, features = ["std"] }

