# dacho/core/components/mesh/Cargo.toml

[package]
name         = "dacho-mesh-c"

edition      = "2021"
rust-version = "1.85.0"

authors      = ["mochou-p"]
license      = "MIT OR Apache-2.0"

[dependencies]
ash  = { version = "0.37.3"                                               }
glam = { version = "0.29.2", default-features = false, features = ["std"] }

