# dacho/core/renderer/vulkan/validation/Cargo.toml

[package]
name         = "dacho-vulkan-validation"

edition      = "2021"
rust-version = "1.84.0"

authors      = ["mochou-p"]
license      = "MIT OR Apache-2.0"

[dependencies]
dacho-log = { path = "../../../log" }

anyhow = { version = "1.0.86", default-features = false, features = ["std"] }
ash    = { version = "0.37.3"                                               }

